# Telegram-Stremio

./: pyproject.toml  reproduce_issue.py  requirements.txt  sample_config.env  test_scrape_baseline.py  update.py  verify_fix.py
Backend/: __init__.py  __main__.py  config.py  providers.py
Backend/fastapi/: main.py
Backend/fastapi/routes/: api_routes.py  public_api.py  stream_routes.py  stremio_routes.py  template_routes.py
Backend/fastapi/templates/: dashboard.html  settings.html  stremio_guide.html
Backend/helper/: database.py  gdrive.py  metadata.py  modal.py  providers.py  pyro.py  scan_manager.py  settings_manager.py
Backend/providers/: fourkhdhub.py
Backend/pyrofork/: bot.py
Backend/pyrofork/plugins/: channels.py  fix_metadata.py  imdb_search.py  links.py  receiver.py  reciever.py  scanner.py  scrape.py  start.py  utilities.py
api/: index.py
tests/: test_filename_extraction.py  test_gdrive_standalone.py
